allow only on slave

--- a/section_4/code/cd_pipeline/Jenkinsfile
+++ b/section_4/code/cd_pipeline/Jenkinsfile
@@ -1,7 +1,7 @@
 #!/usr/bin/groovy
 
 pipeline {
-    agent any
+    "agent { label 'linux01' }
 
     options {
         disableConcurrentBuilds()
@@ -69,7 +69,7 @@ def deploy(environment) {
 	if ("${environment}" == 'dev') {
 		containerName = "app_dev"
 		port = "8888"
-	} 
+	}
 	else if ("${environment}" == 'stage') {
 		containerName = "app_stage"
 		port = "88"
