some changes to see changes in blue ocean

--- a/section_4/code/cd_pipeline/Jenkinsfile
+++ b/section_4/code/cd_pipeline/Jenkinsfile
@@ -93,7 +93,7 @@ def deploy(environment) {
 def approve() {
 
 	timeout(time:1, unit:'DAYS') {
-		input('Do you want to deploy to live?')
+		input('Do you want to deploy to live now?')
 	}
 
 }
